--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,67 @@ body {
   text-rendering: optimizeLegibility;
   font-size: 16px;
   font-weight: 300;
-  font-family: "work sans", sans-serif;
+  /* font-family: "work sans", sans-serif; */
+  font-family: "Roboto";
+  font-style: normal;
   scroll-behavior: smooth;
 }
-
+/* PRODUCT SECTION */
+.product-section .cards {
+  grid-template-columns: auto auto auto auto;
+  margin: 90px;
+}
+.product-card {
+  background-color: #28282a;
+  box-shadow: 1px 1px 15px 5px rgba(0, 0, 0, 0.3);
+  border: 1px solid #000000;
+  border-radius: 15px;
+  width: 92%;
+  height: 60%;
+  color: #dddddd;
+  /* margin: 20px; */
+  position: relative;
+}
+.product-card img {
+}
+.product-para {
+  overflow: hidden;
+}
+.product-para h4 {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+}
+.product-para p {
+  color: #ffffff;
+  opacity: 0.5;
+  font-size: 14px;
+}
+.product-para h5 {
+  color: #9460e9;
+}
+.product-section-para {
+  width: 60%;
+  overflow: hidden;
+}
+.product-btn button {
+  background: #28282a;
+  color: #ffffff;
+  border: none;
+}
+.product-btn button i {
+  color: #9460e9;
+}
 /* FOOTER SECTION */
 
 .footer {
   width: 100%;
   padding: 10px;
   margin-top: 190px;
+  background-color: #28282a;
 }
-.container-fluid {
+.footer-container {
+  margin-top: 120px;
   width: 93%;
 }
 .footer-s a {
@@ -40,8 +89,8 @@ body {
   line-height: 27px;
 }
 .footer-s h3 {
-  font-weight: 500;
-  font-size: 24px;
+  font-weight: 400;
+  font-size: 22px;
   margin-bottom: 52px;
 }
 .footer-p {
